# Togather

./: .gitignore  README.md  compose.yml
src/backend/: Dockerfile  pyproject.toml
src/backend/backend/: settings.py  urls.py
src/backend/togather/: admin.py  apps.py  backends.py  models.py  serializers.py  views.py
src/backend/togather/migrations/: 0001_initial.py  0002_alter_togatheruser_bio_and_more.py  0003_alter_togatheruser_other_sites.py  0004_alter_event_max_participants.py  0005_alter_togatheruser_creator_score_and_more.py  0006_alter_event_creator.py
